--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@astrojs/mdx": "^2.1.1",
     "@astrojs/rss": "^4.0.2",
     "@resvg/resvg-js": "^2.6.0",
+    "@vercel/analytics": "^1.5.0",
     "astro": "^4.2.1",
     "fuse.js": "^7.0.0",
     "github-slugger": "^2.0.0",
